[package]
name = "libtinyos"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []

[dependencies]
linked_list_allocator = "0.10.5"
conquer-once = { version = "0.4.0", default-features = false }
tinyos_abi = { git = "https://github.com/lmeller-git/tinyOS" }
cfg-if = "1.0.1"
bitflags = "2.9.4"
x86_64 = "0.15.2"

[build-dependencies]
cbindgen = "0.29.0"
